# watex

./: .codecov.yml  .coveragerc  .coveralls.yml  .gitignore  .readthedocs.yml  .travis.yml  CITATION.cff  CODE_OF_CONDUCT.md  COPYING  ISSUE_TEMPLATE.md  LICENSE  MANIFEST.in  README.md  SVC__LinearSVC__LogisticRegression.pkl  __XTyT.pkl  __Xy.pkl  _svms_xgboost_.joblib  _svms_xgboost_.pkl  codecov.yml  conftest.py  data.joblib  data0.joblib  demo-project.ipynb  dependencies_watex_project toml.txt  elo.py  etc  md5sums.txt  pscript.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  test_1.csv
.binder/: postBuild  requirements.txt
.checkpoints/: Bag_en-checkpoint.ipynb  model_en-checkpoint.ipynb  modeling _1-checkpoint.ipynb  modeling_2-checkpoint.ipynb  new_processing-checkpoint.ipynb  paper3-checkpoint.ipynb  plot_pca_vs_fa_model_selection-checkpoint.ipynb
.circleci/: config.yml
.github/workflows/: ci.yaml  codeql.yml  dependency-review.yml  push.yaml  python-package.yml  workflow.yml
.pylint.d/: utils.wmathandtricks1.stats
ci/: deps_pinned.txt  getmsfonts.sh
data/: l10_gbalo.xlsx  l11_gbalo.csv  l2_gbalo.xlsx  sfn.txt  ves_gbalo.xls
data/__tar.tgz/: bagoue.main&rawdata.tgz
data/boreholes/: H502.xlsx  h502.csv  hf.csv
data/drill/: data0.xlsx  hnlx.csv  nbleDH.xlsx  nhlogs.csv  nhlogx.csv
data/edis/: new_E1_2.edi  new_e.E00.edi  new_e.E01.edi  new_e.E02.edi
data/erp/: BagoueDataset2.xlsx  gbalo.xlsx  gbalo2.xlsx  l10_gbalo.xlsx  l11_gbalo.xlsx  l2_gbalo.xlsx  test_anomaly.xlsx  testsafedata.csv  testsafedata.xlsx  testunsafedata.csv  testunsafedata.xlsx  testunsafedata_extra.csv
data/exFeatures/: _textfile.xlsx
data/geo_fdata/: BagoueDataset.xls  BagoueDataset2.xlsx  BagoueDataset3.xlsx  _bagoue_civ_loc_ves&erpdata.csv  _bagoue_civ_loc_ves&erpdata2.csv  _bagoue_civ_loc_ves&erpdata3.csv  ~$BagoueDataset3.xlsx
data/geodata/: XXXXXXX.xlsx  l11_gbalo.csv  main.bagciv.data.csv
data/ves/: ves_gbalo.csv  ves_gbalo.xls  ves_gbalo.xlsx  ves_gbalo_unique.xlsx
docs/: .gitignore  README.md  __XTyT.pkl  __Xy.pkl  about.rst  analysis.rst  api_references.rst  base.rst  cases.rst  citing.rst  conf.py  datasets.rst  development.rst  glossary.rst  index.html  index.rst  installation.rst  matplotlibrc.txt  methods.rst  requirements.txt  structure.rst  tune_toc.rst  user_guide.rst  utils.rst  view.rst
docs/_static/: copybutton.js  custom.css  json_url.json  switcher.json  theme.conf
docs/_templates/: custom-template.html  layout.html  version.html
docs/binder/: requirements.txt
docs/community/: CONTRIBUTING.md  contributing.rst  index.rst
docs/demo/: Makefile.txt  data_space.rst  tutorials.rst
docs/history/: five_min_understanding.rst  index.rst  project_goals.rst  project_story.rst
docs/includes/: big_toc_css.rst  bigger_toc_css.rst
docs/source/: about.rst  analysis.rst  api.rst  api_references.rst  base.rst  bases.rst  cases.rst  conf.py  datasets.rst  examples.rst  geology.rst  getting_started.rst  index.html  index.rst  installation.rst  methods.rst  modeling.rst  models.rst  property.rst  script.rst  scripts.rst  structure.rst  tools.rst  tutorials.rst  user_guide.rst  view.rst
docs/sphinxext/: MANIFEST.in  add_toctree_functions.py  doi_role.py  sphinx_issues.py
docs/whatsnew/: index.rst  v0.1.0.rst  v0.1.1.rst  v0.1.10.rst  v0.1.2.rst  v0.1.3.rst  v0.1.4.rst  v0.1.5.rst  v0.1.6-alpha.rst  v0.1.6.rst  v0.1.7.rst  v0.1.8.rst  v0.1.9.rst  v0.2.0.rst  v0.2.1.rst  v0.2.2.rst  v0.2.3.rst  v0.2.4.rst  v0.2.5.rst  v0.2.6.rst  v0.2.7.rst  v0.2.8.rst  v0.3.0.rst  v0.3.1.rst  v0.3.2.rst  v0.3.3.rst
examples/: README.txt
examples/analysis/: README.txt  plot_decision_regions.py  plot_explained_variance_ratio.py  plot_linear_discriminant_analysis.py  plot_pca_vs_factor_with_scedatic_noises.py
examples/applications/: README.txt  plot_auto_detect_drilling_location.py  plot_data_exploratory_quick_view.py  plot_dc_em_parameters_computing.py  plot_dc_em_parameters_computings.py  plot_flow_rate_prediction.py  plot_kmf.py  plot_nsamt_tensor_recovery.py  plot_res_z_phases_tensors.py  plot_tensor_restoring.py  plot_tensors.py  plot_ymxs_label_for_k_prediction.py  stratagem_edi_process_script.py
examples/base/: README.txt  plot_ada_gd.py  plot_ada_stochastic_gd.py  plot_missing.py  plot_profiling_report.py  plot_sbs_feature_selector.py
examples/methods/: README.txt  plot_2d_tensor_filtered.py  plot_anomaly.py  plot_base_process_tensors.py  plot_erp.py  plot_filtered_tensors.py  plot_logging_predictor_and_target.py  plot_logging_predictor_only.py  plot_multiple_sites_recovery_signal.py  plot_noise_removal.py  plot_phase_tensors.py  plot_raw_2d_tensor.py  plot_ves_fracture__zone.py  plot_ves_fracture_zone.py
examples/utils/: README.txt  plot_clusters.py  plot_confidence_in_data.py  plot_confusion_matrices.py  plot_elbow.py  (+21 more)
pme.en.new_data/: pme.en.csv.csv
scripts/: fine_tune_hyperparams.py  grid_search.py  plot_bar_cat_distributions.py  plot_confusion_matrix.py  plot_correlation_matrix.py  plot_discuss_features.py  plot_final_model.py  plot_hist_cat_distributions.py  plot_join_two_features.py  plot_learning_curve.py  plot_model.py  plot_multi_categorical_distributions.py  plot_numerical_features.py  plot_pca.py  plot_pca_variance_ratio.py  plot_precision_recall_threshold.py  plot_roc_curve.py  plot_scattering_features.py  plot_validation_curve.py  plot_validation_curve_2.py  quick_prediction.py  visualize_dataset.py  write_erp_features.py
src/: __main__.py
tests/: __init__.py  random_sample.py  test_bases.py  test_datasets.py  test_decomposition.py  test_dimensionality.py  test_factor.py  test_methods.py  test_plot.py  test_site.py  test_tools.py  test_utils.py
watex/: __init__.py  __main__.py  _distributor_init.py  _docstring.py  _isotonic.pyx  _property.py  _sklearn.py  _typing.py  _version.py  _version.py.py  _watexlog.py  base.py  bases.py  cli.py  decorators.py  documentation.py  edi.py  exceptions.py  exlib.py  hints.py  main.py  metrics.py  properties.py  property.py  site.py  sklearn.py  transformers.py  typing.py  wlog.yml
(+1195 files in other folders)
