[build-system]
requires = ["setuptools >= 61.0.0",
             "wheel", 
             "setuptools_scm>=6.2", 
             "Cython>=0.29.33",
        ]
build-backend = "setuptools.build_meta"

[project]
name = "watex"
version="0.2.0"
dynamic = [ "keywords"]

dependencies=[
    "seaborn >=0.12.0", 
    "pandas >=1.4.0",
    "cython >=0.29.33",
    "pyyaml >=5.0.0", 
    "openpyxl >=3.0.3",
    "xgboost >=1.7.0",
    "pyproj >=3.3.0",
    "pycsamt >=1.1.2",
    "tqdm >=4.64.1",
    "tables >=3.6.0",
    "scikit-learn ==1.2.1",
    "joblib >=1.2.0",
    "threadpoolctl >=3.1.0",
    "matplotlib ==3.5.3",
    "statsmodels >=0.13.1", 
    "numpy >=1.23.0", 
    "scipy >=1.9.0",
    "h5py >=3.2.0",
    "pytest"
 ]
 
[project.urls]
Homepage = "https://watex.readthedocs.io"
Documentation = "https://watex.readthedocs.io"
Source = "https://github.com/WEgeophysics/watex"

[project.optional-dependencies]
dev  = ["click", 
       "missingno>=0.4.2", 
       "yellowbrick>=1.5.0", 
       "pyjanitor>=0.1.7", 
       "mlxtend>=0.21"
 ]

[tool.setuptools.dynamic]
version = {attr = "watex._version.version"}

[tool.setuptools_scm]
write_to = "watex/_version.py"

[tool.pytest.ini_options]
minversion = "6.0"
doctest_optionflags = "NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL"
addopts = "--doctest-glob='*.doctest'"
exclude = '''
/(
    \.eggs         # exclude a few common directories in the
  | \.git          # root of the project
  | \.mypy_cache
  | \.vscode
  | build
  | dist
  | docs/tutorial
  | docs/_build
  | docs/glr_examples
)/
'''