[build-system]
requires = ["setuptools >= 61.0.0",
             "wheel", 
             "setuptools_scm>=6.2", 
             "Cython>=0.29.33",
        ]
build-backend = "setuptools.build_meta"

[project]
name = "watex"
version="0.3.0"

[project.optional-dependencies]
dev  = ["click", 
       "missingno>=0.4.2", 
       "yellowbrick>=1.5.0", 
       "pyjanitor>=0.1.7", 
       "mlxtend>=0.21"
 ]

[tool.setuptools.dynamic]
version = {attr = "watex._version.version"}

[tool.setuptools_scm]
write_to = "watex/_version.py"

[tool.pytest.ini_options]
minversion = "6.0"
doctest_optionflags = "NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL"
addopts = "--doctest-glob='*.doctest'"
exclude = '''
/(
    \.eggs         # exclude a few common directories in the
  | \.git          # root of the project
  | \.mypy_cache
  | \.vscode
  | build
  | dist
  | docs/tutorial
  | docs/_build
  | docs/glr_examples
)/
'''