[build-system]
requires = ["setuptools>=61.0.0", "wheel", "setuptools_scm>=6.2", "Cython>=0.29.33"]
build-backend = "setuptools.build_meta"

[project]
name = "watex"
version = "0.3.3"
description = "Machine learning research in water exploration"
readme = "README.md"
authors = [{name = "Laurent Kouadio", email = "etanoyau@gmail.com"}]
license = {file = "LICENSE"}
keywords = ["exploration", "groundwater", "machine learning", "water", "hydro-geophysics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Programming Language :: C",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: OS Independent",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
]
dependencies = [
    "seaborn>=0.12.0",
    "pandas>=1.4.0",
    "Cython>=0.29.33",
    "PyYAML>=5.0.0",
    "openpyxl>=3.0.3",
    "pyproj>=3.3.0",
    "pycsamt>=1.1.2",
    "tqdm>=4.64.1",
    "tables>=3.6.0",
    "scikit-learn==1.2.1",
    "joblib>=1.2.0",
    "threadpoolctl>=3.1.0",
    "matplotlib==3.5.3",
    "statsmodels>=0.13.1",
    "numpy>=1.23.0",
    "scipy>=1.9.0",
    "h5py>=3.2.0",
    "pytest"
]

requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "click",
    "missingno>=0.4.2",
    "yellowbrick>=1.5.0",
    "pyjanitor>=0.1.7",
    "mlxtend>=0.21",
    "xgboost>=1.7.0",
]

[project.urls]
"Home" = "https://watex.readthedocs.io"
"Documentation" = "https://watex.readthedocs.io/en/latest/api_references.html"
"Bugs Tracker" = "https://github.com/WEgeophysics/watex/issues"
"Installation Guide" = "https://watex.readthedocs.io/en/latest/installation.html"
"User Guide" = "https://watex.readthedocs.io/en/latest/user_guide.html"
"Source" = "https://github.com/WEgeophysics/watex"
"Download" = "https://pypi.org/project/watex/#files"


[tool.setuptools_scm]
write_to = "watex/_version.py"

[project.scripts]
wx = "watex.cli:cli"
version = "watex.cli:version"

[tool.setuptools.dynamic]
version = {attr = "watex._version.version"}

[tool.pytest.ini_options]
minversion = "6.0"
doctest_optionflags = "NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL"
addopts = "--doctest-glob='*.doctest'"
exclude = '''
/(
    \.eggs         # exclude a few common directories in the
  | \.git          # root of the project
  | \.mypy_cache
  | \.vscode
  | build
  | dist
  | docs/tutorial
  | docs/_build
  | docs/glr_examples
)/
'''
