[aliases]
test = pytest

[tool:pytest]
# disable-pytest-warnings should be removed once we rewrite tests
# using yield with parametrize
doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS
testpaths = tests
addopts =
    --doctest-modules
    --disable-pytest-warnings
    --color=yes

filterwarnings =
    ignore:the matrix subclass:PendingDeprecationWarning

[flake8]
# max line length for black
max-line-length = 88
target-version = ['py39']
# Default flake8 3.5 ignored flags
ignore=
    # check ignored by default in flake8. Meaning unclear
    E24,
    # continuation line under-indented   
    E121,
    # closing bracket does not match indentation  
    E123,
    # continuation line over-indented for hanging indent  
    E126,
    # space before : (needed for how black formats slicing)  
    E203,
    # missing whitespace around arithmetic operator  
    E226,
    # multiple statements on one line (def)  
    E704,
    # do not assign a lambda expression, use a def  
    E731,
    # do not use variables named 'l', 'O', or 'I'  
    E741,
    # line break before binary operator  
    W503,
    # line break after binary operator  
    W504,   
exclude=
    # No need to traverse the git directory
    .git,
    __pycache__,
    dist,
    docs/_build,
    docs/glr_examples,
    build

# It's fine not to put the import at the top of the file in the examples
# folder.
per-file-ignores =
    examples/*: E402
    docs/conf.py: E402

[mypy]
ignore_missing_imports = True
allow_redefinition = True

[check-manifest]
# ignore files missing in VCS
ignore =
    watex/utils/test_res_api.py

[codespell]
skip = ./.git,./.mypy_cache,./docs/_build,./docs/glr_examples,./docs/modules/generated
ignore-words = build_tools/codespell_ignore_words.txt

[options.package_data]
watex = utils/_openmp_helpers.pxd, utils/espg.npy, etc/*, wlog.yml, wlogfiles/*.txt
* = *.pxd, data/*, examples/*.py, examples/*.txt
